force-app/main/default/objects/Account/fields/Adspend_1_year_ago__c.field-meta.xml
<CustomField>
    <fullName>Adspend_1_year_ago__c</fullName>
    <label>Adspend (1 year ago)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>