force-app/main/default/objects/Account/fields/Adspend_3_years_ago__c.field-meta.xml
<CustomField>
    <fullName>Adspend_3_years_ago__c</fullName>
    <label>Adspend (3 years ago)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>