force-app/main/default/objects/Account/fields/Adspend_Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Adspend_Current_Year__c</fullName>
    <label>Adspend (Current Year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>