force-app/main/default/objects/Account/fields/Billing_Form_Sent__c.field-meta.xml
<CustomField>
    <fullName>Billing_Form_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Form Sent</label>
    <type>Checkbox</type>
</CustomField>