force-app/main/default/objects/Account/fields/Brand_Id__c.field-meta.xml
<CustomField>
    <fullName>Brand_Id__c</fullName>
    <inlineHelpText>Copy from Insights</inlineHelpText>
    <label>Brand Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>