force-app/main/default/objects/Account/fields/Competition_Brand_Ids__c.field-meta.xml
<CustomField>
    <fullName>Competition_Brand_Ids__c</fullName>
    <inlineHelpText>Separate multiple values by comma.</inlineHelpText>
    <label>Competition Brand Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>