force-app/main/default/objects/Account/fields/Dual_Approval__c.field-meta.xml
<CustomField>
    <fullName>Dual_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dual Approval</label>
    <type>Checkbox</type>
</CustomField>