force-app/main/default/objects/Account/fields/Duplicate_Note__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Note__c</fullName>
    <label>Duplicate Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>