force-app/main/default/objects/Account/fields/Invoice_upload_on_client_portal__c.field-meta.xml
<CustomField>
    <fullName>Invoice_upload_on_client_portal__c</fullName>
    <label>Invoice upload on client portal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>$Record.Upload_Invoices__c</fullName>
                <isActive>false</isActive>
                <label>$Record.Upload_Invoices__c</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>