force-app/main/default/objects/Account/fields/Master_Account__c.field-meta.xml
<CustomField>
    <fullName>Master_Account__c</fullName>
    <label>Master Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>