force-app/main/default/objects/Account/fields/Net_Term__c.field-meta.xml
<CustomField>
    <fullName>Net_Term__c</fullName>
    <label>Net Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>