force-app/main/default/objects/Account/fields/Netsuite_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Account_Name__c</fullName>
    <label>Netsuite Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>