force-app/main/default/objects/Account/fields/Netsuite_Do_Not_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Do_Not_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Netsuite Do Not Invoice</label>
    <type>Checkbox</type>
</CustomField>