force-app/main/default/objects/Account/recordTypes/Demand_Partner.recordType-meta.xml
<RecordType>
    <fullName>Demand_Partner</fullName>
    <active>true</active>
    <label>Demand Partner</label>
</RecordType>