force-app/main/default/objects/Account/validationRules/Account_Approval_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Approval_Status</fullName>
    <active>true</active>
    <description>Account status can&apos;t be approved/rejected on creation.</description>
    <errorConditionFormula>AND(
	ISNEW(),
				 RecordType.Name !=&apos;Demand Partner&apos;,
	OR(
		ISPICKVAL(Account_Review_Status__c, &apos;Approved&apos;),
		ISPICKVAL(Account_Review_Status__c, &apos;Rejected&apos;)
	)
)</errorConditionFormula>
    <errorMessage>Account Review Status can&apos;t be Approved or Rejected on account creation.</errorMessage>
</ValidationRule>