force-app/main/default/objects/Account/validationRules/Name_Change_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_Change_Validation</fullName>
    <active>true</active>
    <description>Non admin users can&apos;t change the name.</description>
    <errorConditionFormula>AND(
	!ISNEW(),
	ISPICKVAL(Account_Review_Status__c, &apos;Approved&apos;),
	ISCHANGED(Name),
	$Profile.Name&lt;&gt;&apos;System Administrator&apos;
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You can&apos;t change the name, please contact system administrator.</errorMessage>
</ValidationRule>