force-app/main/default/objects/Account/listViews/Demand_Partners.listView-meta.xml
<ListView>
    <fullName>Demand_Partners</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Demand_Partner</value>
    </filters>
    <filters>
        <field>Is_Test_Account__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Demand Partners</label>
</ListView>