force-app/main/default/objects/Account/listViews/Parent_Accounts.listView-meta.xml
<ListView>
    <fullName>Parent_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parent__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Parent Accounts</label>
</ListView>