force-app/main/default/objects/Account/listViews/Reseller_Accounts.listView-meta.xml
<ListView>
    <fullName>Reseller_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Reseller</value>
    </filters>
    <filters>
        <field>Is_Test_Account__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Reseller Accounts</label>
</ListView>